<resources>
    <string name="app_name">Lxt</string>
    <string name="no_network_view_hint">网络异常</string>
    <!--数据异常-->
    <string name="empty_data">暂无数据</string>
    <!--启动页-->
    <string name="defaultProverb">让中国孩子拥有全球外教，享受世界一流的教育。</string>
    <string name="defaultTitle">保持专注 遇见美好。</string>
    <!--欢迎页-->
    <string name="welcome_next">跳过</string>
    <!-- 登录 -->
    <string name="login_state">登陆中</string>
    <string name="login_text">请输入手机号</string>
    <string name="login_toast_text">开启你的英语之旅</string>
    <string name="login_Welcome">Welcome</string>
    <string name="login_set_password">请输入密码</string>
    <string name="login">登录</string>
    <string name="phoneNOErro">手机号码格式有误</string>
    <string name="psdErro">密码不能为空</string>

    <string name="register_phone">注册账号</string>
    <string name="Retrieve_password">找回密码</string>

    <!--主页面-->
    <!--侧边栏-->
    <string name="classRecord">课程记录</string>
    <string name="growUpLine">成长曲线</string>
    <string name="myWatchList">我的关注</string>
    <string name="selfMessage">个人信息</string>
    <string name="systemSetting">系统设置</string>
    <!--个人信息-->
    <string name="selfInfo_name">英文名/昵称:</string>
    <string name="selfInfo_sex">性别:</string>
    <string name="selfInfo_phoneNO">手机号:</string>
    <string name="selfInfo_email">邮箱地址:</string>
    <string name="selfInfo_birthday">生日:</string>
    <!--系统设置-->
    <string name="clear_the_cache">清除缓存</string>
    <string name="setting_feelback">意见反馈</string>
    <string name="setting_updataPwd">修改密码</string>
    <string name="setting_version">版本号</string>
    <string name="setting_logout">退出登录</string>
    <!-- 个人中心 -->
    <string name="selfInfo_englist_name">英文名/昵称:</string>
    <string name="selfInfo_takePhone">拍照</string>
    <string name="selfInfo_selectFromSD">从相册中选取</string>
    <string name="selfInfo_namenotNone">姓名不能为空</string>
    <string name="selfInfo_emailnottrue">邮件格式不正确</string>
    <string name="selfInfo_birthdaynotTrue">生日不能为空</string>
    <string name="selfInfo_finishEdit">是否放弃编辑</string>
    <!-- 意见反馈 -->
    <string name="set_leave_a_message">请输入留言......</string>
    <string name="confirm">确认</string>
    <!--课程记录 -->
    <string name="cancle_dialog_title">是否取消当前课程</string>
    <string name="ImageDes">图片</string>
    <string name="myclass_nodata">暂无课程记录</string>
    <string name="myclass_noclass">已经开始上课</string>

    <!--课程评价页面-->
    <string name="appraise_succeed">评价成功</string>
    <string name="appraise_Faild">评价失败</string>
    <string name="appraise">评价</string>
    <string name="appraise_howTeatureQuality">教师的教学质量怎么样</string>
    <string name="appraise_standardPronunciation">发音标准</string>
    <string name="appraise_HightLevelOfAppearance">颜 值 高</string>
    <string name="appraise_HasPatience">有 耐 心</string>
    <string name="appraise_ChineseFluency">中文流利</string>
    <string name="appraise_Interesting">有 趣</string>
    <string name="appraise_enthusiasm">热 情</string>
    <string name="appraise_atFullCock">准备充分</string>
    <string name="appraise_voiceGood">声音好听</string>
    <string name="evaluate_toast_text">快把你想说的告诉我们吧~</string>
    <string name="next">下一步</string>
    <string name="appraise_finish">评完啦</string>
    <!--反馈界面-->
    <string name="fell_thanksForBack">谢谢您的反馈</string>
    <string name="fell_fellBackNotNull">建议不能为空</string>
    <string name="fell_fellBackFaild">评价失败</string>
    <!-- 修改密码 -->
    <string name="the_old_passwd">旧密码:</string>
    <string name="new_passwd">新密码:</string>
    <string name="update_passwd">确认修改</string>
    <string name="the_old_passwd_notNone">旧密码不能为空</string>f
    <string name="new_passwd_notNone">新密码不能为空</string>
    <string name="new_old_passwordNotEaque">新密码不能一样</string>
    <string name="passwordUpdataSuc">密码修改成功</string>
    <string name="passwordUpdataFaild">密码修改失败</string>
    <!--统一的dialog-->
    <string name="dialog_sureBut">确定</string>
    <string name="dialog_cancelBut">取消</string>
    <string name="dialog_sureToCancel">确定要退出吗</string>
    <!--教师列表 -->
    <string name="notice_in_class_age">年龄:</string>
    <string name="notice_in_class">上课通知</string>
    <string name="notice_in_class_from">来自:</string>
    <!-- 预约上课 -->
    <string name="no_course">您尚未拥有课程</string>
    <string name="effective">有效期:</string>
    <string name="to_make_an_appointment">预约</string>
    <!--教师详情 -->
    <string name="age"><![CDATA[年龄：%1$s]]></string>
    <string name="name"><![CDATA[姓名：%1$s]]></string>
    <string name="work"><![CDATA[教学经验：%1$s年]]></string>
    <string name="type"><![CDATA[认证类型：%1$s]]></string>
    <string name="from"><![CDATA[来自：%1$s]]></string>
    <string name="like"><![CDATA[<font color="#ff0000">%1$s</font>  like]]></string>
</resources>
