<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/personal_center_layout_color"
    android:gravity="center"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/x60"
        android:layout_marginRight="@dimen/x60"
        >
        <ImageView
            android:id="@+id/evaluate_finish_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/finish"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/ImageDes"/>
        <ImageView
            android:id="@+id/pic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@mipmap/enter_class_comment_pic"
            android:layout_below="@id/evaluate_finish_image"
            android:layout_marginTop="@dimen/y10"
            />


        <RelativeLayout
            android:visibility="gone"
            android:id="@+id/appraiseContentLayout"
            android:background="@color/white"
            android:layout_below="@id/pic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_marginTop="@dimen/y30"
                android:padding="@dimen/x20"
                android:layout_gravity="center"
                android:gravity="top"
                android:layout_marginLeft="@dimen/x30"
                android:layout_marginRight="@dimen/x30"
                android:layout_marginBottom="@dimen/y20"
                android:id="@+id/evaluate_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/x30"
                android:textColor="#000"
                android:textColorHint="#A1A1A1"
                android:layout_centerHorizontal="true"
                android:hint="@string/evaluate_toast_text"
                android:background="@mipmap/returndata"/>
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/appraiseLayout"
            android:layout_below="@id/pic"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/evaluate_toast_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/appraise_howTeatureQuality"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/y20"
                android:layout_centerHorizontal="true"
                android:padding="@dimen/x10"
                android:textSize="@dimen/x30"/>


            <LinearLayout
                android:id="@+id/starLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/evaluate_toast_text"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_marginTop="@dimen/y20"
                >
                <CheckBox
                    style="@style/evaluateStarStyle"/>

                <CheckBox
                    style="@style/evaluateStarStyle"/>
                <CheckBox
                    style="@style/evaluateStarStyle"/>
                <CheckBox
                    style="@style/evaluateStarStyle"/>
                <CheckBox
                    style="@style/evaluateStarStyle"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/evaluateTagLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/starLayout"
                android:gravity="center_horizontal"
                android:layout_marginTop="@dimen/y30"
                >
                <CheckBox
                    style="@style/evaluateTagStyle"
                    android:text="@string/appraise_standardPronunciation"
                    />
                <CheckBox
                    style="@style/evaluateTagStyle"
                    android:text="@string/appraise_HightLevelOfAppearance"
                    />
                <CheckBox
                    style="@style/evaluateTagStyle"
                    android:text="@string/appraise_HasPatience"
                    />
                <CheckBox
                    style="@style/evaluateTagStyle"
                    android:text="@string/appraise_ChineseFluency"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/evaluateTagLayoutSecond"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/evaluateTagLayout"
                android:gravity="center_horizontal"
                android:layout_marginTop="@dimen/y30"
                android:layout_marginBottom="@dimen/y30"
                >
                <CheckBox
                    style="@style/evaluateTagStyle"
                    android:text=" 有  趣 "
                    />
                <CheckBox
                    style="@style/evaluateTagStyle"
                    android:text="@string/appraise_enthusiasm"
                    />
                <CheckBox
                    style="@style/evaluateTagStyle"
                    android:text="@string/appraise_atFullCock"
                    />
                <CheckBox
                    style="@style/evaluateTagStyle"
                    android:text="@string/appraise_voiceGood"
                    />
            </LinearLayout>
        </RelativeLayout>

    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/x60"
        android:layout_marginRight="@dimen/x60"
        >
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/y1"
            android:background="@color/f0f0f0"
            android:layout_marginLeft="@dimen/x10"
            android:layout_marginRight="@dimen/x10"
            >
        </View>
        <TextView
            android:id="@+id/next_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/x28"
            android:paddingTop="@dimen/y30"
            android:paddingBottom="@dimen/y30"
            android:gravity="center_horizontal"
            android:textColor="@color/next_button_color"/>
    </LinearLayout>
</LinearLayout>