<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/boot_launch_bg"
    android:orientation="vertical"
    >

    <!--swb2017.1.24-->
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:gravity="center|top"
            android:text="@string/login_Welcome"
            android:textSize="50sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:gravity="center|bottom"
            android:text="@string/login_toast_text"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="3.8"
        android:gravity="center|top"
        android:orientation="vertical"
        >

        <EditText
            android:id="@+id/username_edittext"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/login_edittext_bg"
            android:gravity="center"
            android:hint="@string/login_text"
            android:inputType="number"
            android:maxLength="11"
            android:singleLine="true"
            android:text="16688888888"
            android:textColor="@color/gray"
            />
<!--15393131606 -->
        <EditText
            android:id="@+id/password_edittext"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:background="@drawable/login_edittext_bg"
            android:gravity="center"
            android:hint="@string/login_set_password"
            android:inputType="textPassword"
            android:maxLength="20"
            android:screenOrientation="portrait"
            android:singleLine="true"
            android:text="16688888888"
            android:textColor="@color/gray"
            />

        <TextView
            android:id="@+id/error_show_Login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/dim_red"
            />

        <Button
            android:id="@+id/login_button"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/btn_yellowbg"
            android:gravity="center"
            android:text="@string/login"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone"
            >

            <TextView
                android:id="@+id/register_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/register_phone"
                android:textColor="@color/white_gray"
                />

            <ImageView
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/white_gray"
                />

            <TextView
                android:id="@+id/Retrieve_password_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Retrieve_password"
                android:textColor="@color/white_gray"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>