<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/show_user_linear"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/personal_center_layout_color"
    android:gravity="center"
    android:orientation="vertical"
    >

    <View
        android:id="@+id/sliding_dissmiss"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

    <LinearLayout
        android:layout_width="@dimen/x250"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        >

        <View
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="0.8"
            android:gravity="center"
            android:textSize="40sp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="4"
            android:gravity="center"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/show_user_course"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/classRecord"
                android:textSize="20sp"
                />

            <TextView
                android:id="@+id/show_user_growth_curve"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/growUpLine"
                android:textSize="20sp"
                />

            <TextView
                android:id="@+id/show_user_focus_on"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/myWatchList"
                android:textSize="20sp"
                />

            <TextView
                android:id="@+id/show_user_data"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/selfMessage"
                android:textSize="20sp"
                />

            <TextView
                android:id="@+id/show_system_set_up"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/systemSetting"
                android:textSize="20sp"
                />

        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            />
    </LinearLayout>
</RelativeLayout>
