<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:orientation="vertical"
    >

    <include layout="@layout/base_title_layout"/>

    <RelativeLayout
        android:id="@+id/setting_clearCache"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x100"
        android:paddingLeft="@dimen/x10"
        android:paddingRight="@dimen/x10"
        >

        <TextView
            style="@style/default_textStyle_colorblack"
            android:layout_centerVertical="true"
            android:text="@string/clear_the_cache"
            />

        <TextView
            android:id="@+id/setting_cecheCount"
            style="@style/default_textStyle_colorblack"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:drawablePadding="@dimen/x10"
            android:drawableRight="@mipmap/icon_back_right"
            android:gravity="center"
            android:text="0.0MB"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="@color/erro_textColor2"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/setting_fellBack"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x100"
        android:paddingLeft="@dimen/x10"
        android:paddingRight="@dimen/x10"
        >

        <TextView
            style="@style/default_textStyle_colorblack"
            android:layout_centerVertical="true"
            android:text="@string/setting_feelback"
            />

        <TextView
            style="@style/default_textStyle_colorblack"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:drawablePadding="@dimen/x10"
            android:drawableRight="@mipmap/icon_back_right"
            android:gravity="center"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="@color/erro_textColor2"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/setting_updata_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x100"
        android:paddingLeft="@dimen/x10"
        android:paddingRight="@dimen/x10"
        >

        <TextView
            style="@style/default_textStyle_colorblack"
            android:layout_centerVertical="true"
            android:text="@string/setting_updataPwd"
            />

        <TextView
            style="@style/default_textStyle_colorblack"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:drawablePadding="@dimen/x10"
            android:drawableRight="@mipmap/icon_back_right"
            android:gravity="center"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="@color/erro_textColor2"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/x100"
        android:paddingLeft="@dimen/x10"
        android:paddingRight="@dimen/x10"
        >

        <TextView
            style="@style/default_textStyle_colorblack"
            android:layout_centerVertical="true"
            android:text="@string/setting_version"
            />

        <TextView
            android:id="@+id/setting_version"
            style="@style/default_textStyle_colorblack"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:drawablePadding="@dimen/x10"
            android:gravity="center"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="@color/erro_textColor2"
            />
    </RelativeLayout>

    <TextView
        android:id="@+id/setting_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/x120"
        android:layout_marginRight="@dimen/x120"
        android:layout_marginTop="@dimen/y120"
        android:background="@drawable/btn_blubg"
        android:clickable="true"
        android:gravity="center"
        android:paddingBottom="@dimen/x20"
        android:paddingTop="@dimen/x20"
        android:text="@string/setting_logout"

        />


</LinearLayout>
