<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:orientation="vertical"
    >

    <include layout="@layout/base_title_layout"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/the_old_passwd"
            android:textColor="@color/black"
            android:textSize="15sp"
            />

        <EditText
            android:id="@+id/old_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:hint="请输入旧密码"
            android:inputType="textPassword"
            android:maxLength="20"
            android:singleLine="true"
            android:textColor="#000"
            android:textColorHint="#BCBCBC"
            android:textSize="14sp"
            android:textStyle="italic"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_marginTop="3dp"
        android:background="@color/gray"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/new_passwd"
            android:textColor="@color/black"
            android:textSize="15sp"
            />

        <EditText
            android:id="@+id/new_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:hint="只能输入数字和字母"
            android:inputType="textPassword"
            android:maxLength="20"
            android:singleLine="true"
            android:textColor="#000"
            android:textColorHint="#BCBCBC"
            android:textCursorDrawable="@null"
            android:textSize="14sp"
            android:textStyle="italic"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_marginTop="3dp"
        android:background="@color/gray"
        />

    <TextView
        android:id="@+id/updata_submitbut"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="@dimen/x20"
        android:layout_marginTop="@dimen/x20"
        android:background="@drawable/btn_blubg"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/update_passwd"
        android:textColor="@color/white"
        android:textSize="18sp"
        />
</LinearLayout>
